# isakova_l_m

./: CMakeLists.txt  README.md  agreementwindow.ui  burnedcaloriewindow.cpp  burnedcaloriewindow.h  burnedcaloriewindow.ui  changesettingswindow.cpp  changesettingswindow.h  changesettingswindow.ui  checkinwindow.cpp  checkinwindow.h  checkinwindow.ui  complex.cpp  complex.vcxproj  complex.vcxproj.filters  countcaloriewindow.cpp  countcaloriewindow.h  countcaloriewindow.ui  countercalorie.pro  dailyallowancewindow.cpp  dailyallowancewindow.h  dailyallowancewindow.ui  enterwindow.cpp  enterwindow.h  enterwindow.ui  isakova_l_m.sln  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui  rational.cpp  rational.vcxproj  rational.vcxproj.filters
array/: CMakeLists.txt  array.cpp  array.h  array_test.cpp
complex/: CMakeLists.txt  complex.cpp  complex.h  complex.vcxproj  complex.vcxproj.filters  complex_test.cpp
countercalorie/: agreementwindow.cpp  agreementwindow.h  agreementwindow.ui  burnedcaloriewindow.cpp  burnedcaloriewindow.h  burnedcaloriewindow.ui  changesettingswindow.cpp  changesettingswindow.ui  checkinwindow.cpp  checkinwindow.h  checkinwindow.ui  countcaloriewindow.cpp  countcaloriewindow.h  countcaloriewindow.ui  countercalorie.pro.user.c699707.xml  dailyallowancewindow.cpp  dailyallowancewindow.ui  enterwindow.cpp  enterwindow.h  enterwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.ui
heap/: CMakeLists.txt
kvaternion/: CMakeLists.txt  kvaternion.cpp  kvaternion.h  (+1 more)
(+55 files in other folders)
