cmake_minimum_required(VERSION 3.9.3)
project(isakova_l_m)

add_subdirectory(complex)
add_subdirectory(rational)
add_subdirectory(vec3d)
add_subdirectory(vec3dt)
add_subdirectory(rect2d)
add_subdirectory(kvaternion)
add_subdirectory(array)
add_subdirectory(matrixu)
add_subdirectory(matrixr)